# rust-native-realworld-example-app

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: data.rs  main.rs  message.rs  page.rs  view.rs
src/data/: file.rs  fixture.rs
src/message/: page.rs  step.rs
src/page/: home.rs  sign_up.rs
src/style/: link.rs
src/view/: home.rs  input.rs  nav.rs  page.rs  sign_in.rs  sign_up.rs  step.rs  tag.rs
