[package]
name = "rust-native-dapp-realworld-example-app"
version = "0.1.0"
authors = ["Hunter Trujillo <hunter@cryptoquick.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git#69f20f981af4d4a25ac30a2d7eca437b483edcce" }
ipfs = { git = "https://github.com/ipfs-rust/rust-ipfs.git#313f25af316cd323d7e0df078013a046b9995a15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "2.0"
async-std = { version = "1.3", features = ["unstable"] }
env_logger = "0.7"
